--- a/style.css
+++ b/style.css
@@ -20,15 +20,24 @@ body{
         text-align: center;
         font-style: italic;
     }
-    p{
+    p.paragrafo{
         text-align: center;
         background: rgba(103, 103, 194, 0.678);
         border-radius: 5px;
         box-shadow: 8px 10px rgba(41, 10, 10, 0.589);
+        padding: 10px;
+        font-weight: bold;
+       
+       
+    }
+    input.btn{
+        font-weight: bold;
+       
     }
    
-  input{
-   
+  input.btn:hover{
+    background-color:rgba(103, 103, 194, 0.459);;
+    transition: .5s;  
   }
 h3{
     text-align: center;
@@ -41,4 +50,30 @@ h5{
 h6{
     text-align: center;
 }
+
+div.flex form{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+ 
     
+}
+div.flex form input{
+    width: 300px;
+    padding: 10px;
+    border-radius: 10px;
+   
+    
+}
+div.flex form input.btn{
+    margin: auto;
+}
+div.flex form label {
+text-transform: uppercase;
+justify-items: center;
+}
+    
+
+@media screen and (max-width:800px;)  {
+    
+}
