--- a/style.css
+++ b/style.css
@@ -8,10 +8,10 @@ body{
     
     }
     section{
-    background: white;
+    background-color:#ffffffee;
     border-radius: 10px;
     padding: 15px;
-    width: 500px;
+    width: 700px;
     margin: auto;
     box-shadow: 8px 8px 10px rgba(0, 0, 0, 0.425);
     }
@@ -25,8 +25,8 @@ body{
         background: rgba(103, 103, 194, 0.678);
         border-radius: 5px;
         box-shadow: 8px 10px rgba(41, 10, 10, 0.589);
-        padding: 10px;
         font-weight: bold;
+        padding: 10px;
        
        
     }
@@ -50,46 +50,44 @@ h5{
 h6{
     text-align: center;
 }
+p{
+    line-height: 10px;
+}
 
 
 div.flex form{
     display: flex;
     flex-direction: column;
-    gap: 10px;
     margin: auto;
+   
     
     
 }
 div.flex form input{
     width: 300px;
     padding: 10px;
-    border-radius: 10px; 
+    border-radius: 10px;
 }
 div.flex form input.btn{
-    margin: auto;
+    margin:10px  auto;
+    
+
 }
 div.flex form label {
 text-transform: uppercase;
-justify-items: center;
+margin-left: -120px;
+
 }
-.checkbox-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .checkbox-container input[type="checkbox"] {
-    margin-right: 10px;
-  }
-  .checkbox-container {
-    display: flex;
-    flex-direction: column;
-   
-  }
+
+
     
 
-@media screen and (max-width:768px)  {
+@media screen and (max-width:800px)  {
   section{
     width: 400px;
   }
+  label{
+   margin-left: -120px;
+  }
+
 }
